resolved: The 'provider' buttons/badges at the bottom of the Profile page could be bigger, or just sit on the page a bit better; they're a bit small on mobile

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -68,4 +68,12 @@ page-profile {
     margin-right: 5px;
   }
 
+  #auth-providers{
+    .item-button{
+      padding: 0 1em;
+      height: 35px;
+      font-size: 15px;
+    }
+  }
+
 }
